--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <a class="header__link">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#lots">посмотреть лоты</a>
+            <a class="header__link link__hover" href="#lots">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#about">об аукционе</a>
+            <a class="header__link link__hover" href="#about">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -38,10 +38,10 @@
 
       <address class="address header__address">
         <ul>
-          <li class="header__link phone">
+          <li class="header__link phone link__hover">
             <a href="tel:+999999555555">+9 999 555 5555</a>
           </li>
-          <li class="header__link email">
+          <li class="header__link email link__hover">
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
           <li class="header__link address">
@@ -167,10 +167,10 @@
     <footer class="footer">
       <address class="address footer__address">
         <ul>
-          <li class="footer__link phone">
+          <li class="footer__link phone link__hover">
             <a href="tel:+999999555555">+9 999 555 5555</a>
           </li>
-          <li class="footer__link email">
+          <li class="footer__link email link__hover">
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
           <li class="footer__link adress">
@@ -186,10 +186,10 @@
             <a class="footer__link">главная</a>
           </li>
           <li class="footer__links-list-item">
-            <a class="footer__link" href="#lots">посмотреть лоты</a>
+            <a class="footer__link link__hover" href="#lots">посмотреть лоты</a>
           </li>
           <li class="footer__links-list-item">
-            <a class="footer__link" href="#about">об аукционе</a>
+            <a class="footer__link link__hover" href="#about">об аукционе</a>
           </li>
         </ul>
       </nav>
